# fpp-sample-haskell

./: .gitignore  README.md  fpp-enkf-conus.cabal  stack.yaml
src/: fpp-ctl.hs  fpp-filepost.hs  fpp-grads.hs  simulate.hs
src/PWS/HPC/Common/Data/: Time.hs
src/PWS/HPC/EnkfConus/: Config.hs  Log.hs  Time.hs  Trans.hs  Types.hs  Util.hs  WorkingDir.hs
src/PWS/HPC/EnkfConus/CtlIdx/: CtlFile.hs  IdxFile.hs  ItagFile.hs
src/PWS/HPC/EnkfConus/FilePost/: Copy.hs  Rest.hs
src/PWS/HPC/EnkfConus/Grads/: Commands.hs  Param.hs  Region.hs  ResizeImages.hs  Run.hs
src/PWS/HPC/EnkfConus/Simulate/: Opts.hs
testsuite/: Grads.hs  test-main.hs
util/: enkf_conus-ctl.sh  enkf_conus-filepost.sh  enkf_conus-grads.sh  img-resize.sh  install.hs
